# llm-quantization

./: .gitignore  Makefile  README.md  main.py  pyproject.toml
config/: quantization.yaml  text_generation.yaml  training.yaml
config/model/: qwen2.5-3B.yaml
config/models/: qwen2.5-3B.yaml
data/: kinhvanhoa.txt
src/models/: __init__.py  load.py  text_generation.py  trainer.py
src/scripts/: download_model.py  text_generation.py  train.py
src/utils/: __init__.py  data.py  logging.py
