[project]
name = "llm-quantization"
version = "0.1.0"
description = "A simple project testing model quantization with LLMs"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "huggingface>=0.0.1",
    "hydra-core>=1.3.2",
    "omegaconf>=2.3.0",
    "transformers>=4.57.1",
]

[dependency-groups]
dev = [
    "ruff>=0.14.5",
]
